kubernetes/apps/kube-system/cilium/gateway/cilium.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &host external-cilium.${SECRET_DOMAIN}
  labels:
    type: external
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.5.254
  infrastructure:
    annotations:
      # when using gateway-apis in cilium it also creates a service
      # with a different name and tries to take this IP.
      # the problem is the service created by cilium is not the one used by envoy.
      # therefore, the service is disabled
      external-dns.alpha.kubernetes.io/hostname: *host
      lbipam.cilium.io/ips: 192.168.5.254
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production"
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &host internal-cilium.${SECRET_DOMAIN}
  labels:
    type: internal
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.5.255
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *host
      lbipam.cilium.io/ips: 192.168.5.255
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.nycarch.xyz"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production"
