kubernetes/apps/kube-system/cilium/gateway/patchhostname.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  listeners:
    - name: http
      hostname: "*.${SECRET_DOMAIN}"
    - name: https
      hostname: "*.${SECRET_DOMAIN}"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  listeners:
    - name: http
      hostname: "*.local.${SECRET_DOMAIN}"
    - name: https
      hostname: "*.local.${SECRET_DOMAIN}"
